# BattleNetworkAutomation

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  MANIFEST.in  README.md  admin_cog.py  auto_trader.py  chip.py  chip_info_cog.py  chip_list.py  chip_trade_cog.py  common_items.json  controller.py  discord_bot.py  image_processing.py  info_cog.py  main.py  navicust_part.py  navicust_part_list.py  pyproject.toml  requirements.txt  setup.sh  start_server.py  testbench.py  trade_cog.py  trade_manager.py  utils.py
scripts/: config_fs_startup.sh  function_fs_server.py  function_fs_startup.sh
sinks/: __init__.py  controller_sink.py  serial_port_sink.py  socket_sink.py  usb_hid_gadget_sink.py
src/bn_automation/: image_processing.py  script.py
src/bn_automation/controller/: commands.py  controller.py  function_fs_server.py  raw_inputs.py
src/bn_automation/controller/sinks/: socket_sink.py
src/bn_automation/data/: chips.json  gigachips.json  megachips.json  navicust.json  untradable.json  untradable_mega.json
src/bn_automation/scripts/: function_fs_startup.sh  install-rpi4.sh  install.sh  setup_tc358743.sh  start_server.py
src/nx/automation/: WindowsGraphicsCaptureMethod.py  image_processing.py  script.py
src/nx/automation/pytesseract/: __init__.py  pytesseract.py
src/nx/controller/: __init__.py  commands.py  controller.py  function_fs_server.py  gamepad_input.py  raw_inputs.py  xinput_server.py
src/nx/controller/sinks/: __init__.py  controller_sink.py  socket_sink.py  windows_named_pipe_sink.py
src/nx/scripts/: init_tc358743.sh  install.py  start_server.py
src/windows/automation/: steam.py
utils/: Gamepad.py  __init__.py  crc8_wrapper.py  function_fs_server.py  raw_inputs.py  structs.py
