[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "battle-network-automation"
authors = [
    {name = "wchill"}
]
description = "Automation for Battle Network Legacy Collection"
requires-python = ">=3.8"
version = "1.0"
dependencies = [
    "functionfs",
    "libevdev",
    "numpy",
    "opencv-contrib-python",
    "opencv-python",
    "psutil",
    "pytesseract",
    "pyudev"
]

[project.scripts]
install-usbgadget = "mmbn.scripts.install:install"
start-server = "mmbn.scripts.start_server:start_server"

[tool.setuptools]
platforms = ["linux"]

[tool.black]
line-length = 120
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3
py_version = 38
