[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "battle-network-automation"
authors = [
    {name = "wchill"}
]
description = "Nintendo Switch Automation for Battle Network Legacy Collection"
requires-python = ">=3.8"
version = "1.0"
dependencies = [
    'functionfs ; platform_system != "Windows"',
    'libevdev ; platform_system != "Windows"',
    "numpy",
    "opencv-contrib-python",
    "opencv-python",
    "psutil",
    "pytesseract",
    'pyudev ; platform_system != "Windows"',
    'pywin32 ; platform_system == "Windows"',
    'vdf ; platform_system == "Windows"',
    'winsdk ; platform_system == "Windows"'
]

[project.scripts]
start-server = "nx.scripts.start_server:start_server"

[tool.setuptools]
platforms = ["linux", "windows"]

[tool.black]
line-length = 120
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3
py_version = 38
